Fix Layout issue

--- a/styles/productPageStyle.css
+++ b/styles/productPageStyle.css
@@ -607,3 +607,45 @@ h1#productName{
     background-color: black;
     border-radius: 50%;
 }
+#spacer{
+    position: relative;
+    left: -34px
+}
+#spacer span{
+    padding: 1px 2px;
+}
+
+.iconProduct{
+    height: 22px;
+    width: 22px;
+    filter: grayscale(100%);
+}
+.alsoLike{
+    margin-top: 10px;
+    margin-bottom: 16px;
+    color: #212121;
+    font-size: 16px;
+    font-weight: 600;
+    
+    line-height: 20px;
+}
+.alsoLikeCategory{
+    display: flex;
+    gap: 2px;
+}
+.alsoLikeSection{
+    max-width: 1188px;
+    margin: auto;
+    padding-bottom: 24px;
+}
+.alsoLikeCategory .productRating i{
+    color: gold;
+}
+.alsoLikeCategory .card{
+    width: 188px;
+    height: 274px;
+    padding-bottom: 10px;
+}
+.alsoLikeCategory .card p{
+    margin-bottom: 0px;
+}
